// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aboutListItem should render the aboutListItem 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="aboutListItem"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F8F9FA",
        "borderBottomColor": "#F8F9FA",
        "borderBottomWidth": 1,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 15,
        "width": "100%",
      }
    }
    testID="padView"
  >
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
      theme={
        {
          "colors": {
            "black": "#242424",
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": {
              "android": {
                "error": "#f44336",
                "grey": "rgba(0, 0, 0, 0.54)",
                "primary": "#2196f3",
                "searchBg": "#dcdce1",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "default": {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "ios": {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "web": {
                "error": "#ff190c",
                "grey": "#393e42",
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#ca71eb",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#ca71eb",
            "success": "#52c41a",
            "warning": "#faad14",
            "white": "#ffffff",
          },
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "transparent",
            "color": "#242424",
            "fontFamily": "IBMPlexSans-SemiBold",
            "fontSize": 30,
            "lineHeight": 37.5,
          }
        }
        testID="ALI_title"
      >
        title
      </Text>
      <Text
        style={
          {
            "backgroundColor": "transparent",
            "color": "#1F2532",
            "fontFamily": "IBMPlexSans",
            "fontSize": 28.125,
            "lineHeight": 37.5,
          }
        }
        testID="ALI_subTitle"
      >
        subtitle
      </Text>
    </View>
    <View
      style={
        {
          "paddingLeft": 16,
        }
      }
    />
    <View
      style={
        {
          "alignSelf": "center",
          "borderRadius": 16,
          "height": 28,
          "margin": 7,
          "overflow": "hidden",
          "width": 28,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#006864",
              "borderRadius": 16,
              "height": 28,
              "justifyContent": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 12,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "fontFamily": "Entypo",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            testID="iconIcon"
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`aboutListLink should render the aboutListLink 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="aboutListLink"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F8F9FA",
        "borderBottomColor": "#F8F9FA",
        "borderBottomWidth": 1,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 15,
        "width": "100%",
      }
    }
    testID="padView"
  >
    <View
      style={
        [
          {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
      theme={
        {
          "colors": {
            "black": "#242424",
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": {
              "android": {
                "error": "#f44336",
                "grey": "rgba(0, 0, 0, 0.54)",
                "primary": "#2196f3",
                "searchBg": "#dcdce1",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "default": {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "ios": {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "web": {
                "error": "#ff190c",
                "grey": "#393e42",
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#ca71eb",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#ca71eb",
            "success": "#52c41a",
            "warning": "#faad14",
            "white": "#ffffff",
          },
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "transparent",
            "color": "#242424",
            "fontFamily": "IBMPlexSans-SemiBold",
            "fontSize": 30,
            "lineHeight": 37.5,
          }
        }
        testID="ALL_title"
      >
        title
      </Text>
      <Text
        style={
          {
            "backgroundColor": "transparent",
            "color": "#1F2532",
            "fontFamily": "IBMPlexSans",
            "fontSize": 28.125,
            "lineHeight": 37.5,
          }
        }
        testID="ALL_subTitle"
      >
        subtitle
      </Text>
    </View>
    <View
      style={
        {
          "paddingLeft": 16,
        }
      }
    />
    <View
      style={
        {
          "alignSelf": "center",
          "borderRadius": 16,
          "height": 28,
          "margin": 7,
          "overflow": "hidden",
          "width": 28,
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#EB576A",
              "borderRadius": 16,
              "height": 28,
              "justifyContent": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 12,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "fontFamily": "Entypo",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            testID="iconIcon"
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`redirectModal should render the redirectModal 1`] = `
<Modal
  animationType="none"
  deviceHeight={null}
  deviceWidth={null}
  hardwareAccelerated={false}
  hideModalContentWhileAnimating={false}
  onBackdropPress={[MockFunction]}
  onModalHide={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  onRequestClose={[MockFunction]}
  onSwipeComplete={[MockFunction]}
  panResponderThreshold={4}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={50}
  scrollTo={null}
  statusBarTranslucent={false}
  supportedOrientations={
    [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  testID="redirectModal"
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    forwardedRef={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "black",
        "bottom": 0,
        "height": 1334,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      [
        [
          {
            "margin": 37.5,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
          {
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "borderColor": "#F8F9FA",
            "borderRadius": 10,
            "justifyContent": "flex-end",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 80,
          },
          {
            "margin": 0,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      collapsable={false}
      deviceHeight={null}
      deviceWidth={null}
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onBackdropPress={[MockFunction]}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      onSwipeComplete={[MockFunction]}
      panResponderThreshold={4}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={50}
      scrollTo={null}
      statusBarTranslucent={false}
      style={
        {
          "borderColor": "#F8F9FA",
          "borderRadius": 10,
          "flex": 1,
          "justifyContent": "flex-end",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 80,
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          {
            "backgroundColor": "#F8F9FA",
            "borderColor": "#F8F9FA",
            "borderTopLeftRadius": 10,
            "borderTopRightRadius": 10,
            "height": "auto",
            "maxHeight": "90%",
            "paddingLeft": 20,
            "paddingRight": 20,
          }
        }
      >
        <View
          style={
            {
              "paddingBottom": 20,
              "paddingTop": 20,
            }
          }
        >
          <View
            style={
              {
                "borderBottomColor": "#F8F9FA",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#1F2532",
                  "fontFamily": "IBMPlexSans-SemiBold",
                  "fontSize": 45,
                  "lineHeight": 54.375,
                  "marginBottom": 5,
                }
              }
              testID="RM_title"
            >
              title
            </Text>
            <View
              accessibilityHint="Closes current page or modal."
              accessibilityLabel="close"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessible={false}
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2532",
                            "fontSize": 24,
                          },
                          {
                            "backgroundColor": "transparent",
                          },
                          {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰅖
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#1F2532",
                "fontFamily": "IBMPlexSans",
                "fontSize": 28.125,
                "lineHeight": 37.5,
              }
            }
            testID="RM_text"
          >
            some text
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#DADADA",
            "height": 1,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F8F9FA",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "height": "auto",
              "margin": 10,
              "width": 44,
            }
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Switches to default browser application, and opens link there."
            accessibilityLabel="accept"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="redirectBtn"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  {
                    "borderRadius": 28,
                    "height": 52,
                    "margin": 7,
                    "overflow": "hidden",
                    "width": 52,
                  }
                }
              >
                <View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#1F2532",
                        "borderRadius": 28,
                        "height": 52,
                        "justifyContent": "center",
                        "width": 52,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#ffffff",
                            "fontSize": 24,
                          },
                          {
                            "backgroundColor": "transparent",
                          },
                          {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰄬
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "height": "auto",
              "margin": 10,
              "width": 44,
            }
          }
        />
      </View>
    </View>
  </View>
</Modal>
`;
